@@ -12,7 +12,9 @@
 #ifndef __SDCC_mcs51
 #ifndef __SDCC_gbz80
 #ifndef __SDCC_hc08
+#ifndef __SDCC_s08
 double x[100][100]; /* Too big for mcs51 and gbz80. */
+#endif
 #endif
 #endif
 #endif
@@ -22,6 +24,7 @@ testTortureExecute (void)
 #ifndef __SDCC_mcs51
 #ifndef __SDCC_gbz80
 #ifndef __SDCC_hc08
+#ifndef __SDCC_s08
   int i;
 
   i = 99;
@@ -29,6 +32,7 @@ testTortureExecute (void)
   if (x[99][0] != 42)
     ASSERT (0);
   return;
+#endif
 #endif
 #endif
 #endif
